yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-morty-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: rick-morty
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
